kubernetes/gke/orangered.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orangered
  labels:
    app: orangered
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: orangered
    spec:
      containers:
        - name: orangered
          image: gcr.io/orangered/orangered
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health_check
              port: 5000
