kubernetes/gke/orangered-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orangered
  labels:
    service: orangered
spec:
  type: NodePort
  selector:
    app: orangered
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: orangered-port
