kubernetes/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orangered-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: orangered
    networking.gke.io/managed-certificates: orangered-certificate
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: orangered
    servicePort: 5000
